--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "@janiscommerce/export",
   "version": "1.0.0",
   "description": "A package to handle JANIS Export APIs",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "export TEST_ENV=true; mocha --exit -R nyan --recursive tests/",
     "test-ci": "nyc --reporter=html --reporter=text mocha --recursive tests/",
     "watch-test": "export TEST_ENV=true; mocha --exit -R nyan -w --recursive tests/",
     "coverage": "nyc npm test",
-    "lint": "eslint index.js lib/ tests/"
+    "lint": "eslint lib/ tests/"
   },
   "repository": {
     "type": "git",
@@ -20,8 +20,8 @@
   "devDependencies": {
     "husky": "^2.4.1",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.3",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.2",
     "mocha": "^5.2.0",
     "nyc": "^13.1.0",
     "sinon": "^7.3.2"
@@ -31,5 +31,12 @@
   ],
   "directories": {
     "test": "tests"
+  },
+  "dependencies": {
+    "@janiscommerce/api-save": "^4.2.1",
+    "@janiscommerce/event-emitter": "^2.0.2",
+    "@janiscommerce/microservice-call": "^3.0.1",
+    "@janiscommerce/model": "^3.6.0",
+    "superstruct": "0.6.1"
   }
 }
