--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "license": "ISC",
   "homepage": "https://github.com/janis-commerce/export.git#readme",
   "devDependencies": {
-    "husky": "^2.4.1",
+    "@janiscommerce/api-test": "^2.1.2",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.2",
+    "husky": "^2.4.1",
     "mocha": "^5.2.0",
+    "mock-require": "^3.0.3",
     "nyc": "^13.1.0",
     "sinon": "^7.3.2"
   },
@@ -33,7 +35,7 @@
     "test": "tests"
   },
   "dependencies": {
-    "@janiscommerce/api-save": "^4.2.1",
+    "@janiscommerce/api-save": "^4.3.1",
     "@janiscommerce/event-emitter": "^2.0.2",
     "@janiscommerce/microservice-call": "^3.0.1",
     "@janiscommerce/model": "^3.6.0",
