--- a/docs/schemas/export/post.yml
+++ b/docs/schemas/export/post.yml
@@ -11,6 +11,7 @@ paths:
       security:
         - ApiKey: []
           ApiSecret: []
+          JanisClient: []
       requestBody:
         description: The export to create
         required: true
