--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@janiscommerce/export",
-  "version": "1.3.0",
-  "description": "A package to handle JANIS Export APIs",
+  "version": "1.4.0",
+  "description": "A package to handle Janis Exports",
   "main": "lib/index.js",
   "scripts": {
     "test": "export TEST_ENV=true; mocha --exit -R nyan --recursive tests/",
@@ -36,14 +36,14 @@
     "test": "tests"
   },
   "dependencies": {
-    "@janiscommerce/api-save": "^4.4.1",
+    "@janiscommerce/api-save": "^4.5.0",
     "@janiscommerce/event-emitter": "^2.0.2",
-    "@janiscommerce/event-listener": "^1.1.1",
+    "@janiscommerce/event-listener": "^1.2.0",
     "@janiscommerce/mail": "^2.0.0",
     "@janiscommerce/microservice-call": "^4.0.0",
-    "@janiscommerce/model": "^3.6.3",
-    "@janiscommerce/s3": "^1.2.1",
-    "exceljs": "^3.6.1",
+    "@janiscommerce/model": "^4.1.0",
+    "@janiscommerce/s3": "^1.3.0",
+    "exceljs": "3.6.1",
     "lllog": "^1.1.2",
     "superstruct": "0.6.2"
   }
