--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "@janiscommerce/microservice-call": "^4.0.0",
     "@janiscommerce/model": "^4.1.0",
     "@janiscommerce/s3": "^1.3.0",
+    "@janiscommerce/superstruct": "^1.1.1",
     "exceljs": "3.6.1",
-    "lllog": "^1.1.2",
-    "superstruct": "0.6.2"
+    "lllog": "^1.1.2"
   }
 }
