--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "export TEST_ENV=true; mocha --exit -R nyan --recursive tests/",
-    "test-ci": "nyc --reporter=html --reporter=text mocha --recursive tests/",
+    "test-ci": "nyc --reporter=lcov --reporter=text-summary mocha --exit --recursive tests/",
     "watch-test": "export TEST_ENV=true; mocha --exit -R nyan -w --recursive tests/",
     "coverage": "nyc npm test",
     "lint": "eslint lib/ tests/"
@@ -18,16 +18,17 @@
   "license": "ISC",
   "homepage": "https://github.com/janis-commerce/export.git#readme",
   "devDependencies": {
-    "@janiscommerce/api-test": "^3.0.1",
-    "@janiscommerce/event-listener-test": "^2.0.0",
-    "eslint": "^7.2.0",
+    "@janiscommerce/api-session": "^3.0.0",
+    "@janiscommerce/api-test": "^4.0.0",
+    "@janiscommerce/event-listener-test": "^3.0.0",
+    "eslint": "^7.8.0",
     "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-plugin-import": "^2.18.2",
-    "husky": "^2.4.1",
-    "mocha": "^8.0.1",
+    "eslint-plugin-import": "^2.22.0",
+    "husky": "^4.2.5",
+    "mocha": "^8.1.3",
     "mock-require": "^3.0.3",
     "nyc": "^15.1.0",
-    "sinon": "^9.0.2"
+    "sinon": "^9.0.3"
   },
   "files": [
     "lib/"
@@ -36,11 +37,11 @@
     "test": "tests"
   },
   "dependencies": {
-    "@janiscommerce/api-save": "^5.0.0",
-    "@janiscommerce/lambda": "^1.0.1",
+    "@janiscommerce/api-save": "^6.0.0",
+    "@janiscommerce/lambda": "^3.0.0",
     "@janiscommerce/mail": "^2.0.0",
-    "@janiscommerce/microservice-call": "^4.0.0",
-    "@janiscommerce/model": "^4.1.0",
+    "@janiscommerce/microservice-call": "^4.1.2",
+    "@janiscommerce/model": "^5.0.0",
     "@janiscommerce/s3": "^1.3.0",
     "@janiscommerce/superstruct": "^1.1.1",
     "exceljs": "3.6.1",
